--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 <footer>
 <div class="footer">
 <section>
-<p><img src="img/wishan_logo.jpeg" alt="WISHAN" style="width: 100px; margin-left: 80px;"></p>
+<p><img src="wishan_logo.jpeg" alt="WISHAN" style="width: 100px; margin-left: 80px;"></p>
 <p> <p>
     We provide Automation and Customization for your business needs with Generative AI.
   </p></p>
